Fix toggle button to work in right aligned contexts

--- a/dev/scss/main/buttongroup.scss
+++ b/dev/scss/main/buttongroup.scss
@@ -52,6 +52,7 @@
       font-family: 'FontAwesome';
       width: 1.2em;
       display: inline-block;
+      text-align: left;
       &:not(.checked)::after {
         content: $fa-check;
       }
